# kernelforge

./: .gitignore  README.md  TODO_colab.md  chrome_trace.json  colab.ipynb  deploy.sh  profile.ipynb  pyproject.toml
lambda-logs/log/transformer/: 192-222-51-72_4336.1774353536539013415.pt.trace.json
log/: bfeed93fe629_2566.1773933981558265129.pt.trace.json
src/: cuda.ipynb  grayscale.ipynb  trace.json
src/cuda/: add.cpp  add_cuda.cu
src/kernels/: blur.cu  grayscale.cu  matmul.cu  vector_addition.cu
src/pmpp/: exercises.cu
src/py/: blur.py  compile.py  grayscale.py  inference.py  utils.py
