[project]
name = "kernelforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "notebook>=7.5.4",
    "pip>=26.0.1",
    "pre-commit>=4.5.1",
    "setuptools>=75.0.0,<81",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.22.0",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.25.0",
]
